@@ -30960,19 +30960,19 @@
 
 
   1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18
-  2  3  5  6  7  8  9 10 11 12 13 14 15 16
-  1  4 17 18
+  2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
+  1  4
   1  4
   1  4
   6  7  8 10 11 13 14 15
   2  3  5  9 12 16 17 18
 
-  2  3  5  9 12 16
-  1  4  6  7  8 10 11 13 14 15 17 18
+  2  3  5  9 12 16 17 18
+  1  4  6  7  8 10 11 13 14 15
 
 
-  1  4  6  7  8 10 11 13 14 15 17 18
-  1  4  6  7  8 10 11 13 14 15 17 18
+  1  4  6  7  8 10 11 13 14 15
+  1  4  6  7  8 10 11 13 14 15
 
 
   2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
@@ -30998,8 +30998,8 @@
 
 
   1  4
-  2  3  5  6  7  8  9 10 11 12 13 14 15 16
- 17 18
+  2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
+
   2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
   1  4
 
@@ -31023,47 +31023,47 @@
 
 
 
-  2  3  5  6  7  8  9 10 11 12 13 14 15 16
+  2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
 
 
 
 
 
 
- 17 18
-  1  2  3  4  5  9 12 16 17 18
+
+  1  2  3  4
 
 
-  2  3  5  6  7  8  9 10 11 12 13 14 15 16
-  1  2  3  4  5  9 12 16 17 18
-  1  2  3  4  5  9 12 16 17 18
+  2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
+  1  2  3  4
+  1  2  3  4
 
   1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18
   1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18
 
 
 
-  5  9 12 16 17 18
 
 
 
 
 
- 17 18
-  2  3  5  6  7  8  9 10 11 12 13 14 15 16
 
-  1  4
 
+  2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
 
   1  4
 
-  2  3  5  6  7  8  9 10 11 12 13 14 15 16
-  2  3  5  6  7  8  9 10 11 12 13 14 15 16
+
+  1  4
+
+  2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
+  2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
 
 
 
-  2  3  5  6  7  8  9 10 11 12 13 14 15 16
-  2  3  5  9 12 16
+  2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
+  2  3  5  9 12 16 17 18
   6  7  8 10 11 13 14 15
 
 
@@ -31077,7 +31077,7 @@
 
   2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
 
-  2  3  5  6  7  8  9 10 11 12 13 14 15 16
+  2  3  5  6  7  8  9 10 11 12 13 14 15 16 17 18
 
   1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16
   2  3  5  6  7  8  9 10 11 12 13 14 15 16
